lang.java.statics.test/tests/positive/classes/fields/cyclic.yes.javtest
STATIX ok
JAVAC  ok

[A]
public class A {
    public A f;
}

