lang.java.statics.test/tests/negative/duplicate-declarations/toplevelclass.no.javtest
STATIX fail java\.duplicates\.no-duplicate-type.*\"A\"
JAVAC  fail duplicate class\: A

[A]
public class A {}
public class A {}

